--- a/package.json
+++ b/package.json
@@ -5,11 +5,29 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint --init"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.4.0",
+    "antd": "^4.15.4",
+    "moment": "^2.29.1",
+    "mongoose": "^5.12.7",
     "next": "10.0.9",
+    "next-connect": "^0.10.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.4.2",
+    "swr": "^0.5.5",
+    "yup": "^0.32.9"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.26.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-react": "^7.23.2"
   }
 }
